[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/readStoryScene/readStory.gd" type="Script" id=1]
[ext_resource path="res://212 Queenie Sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=3]
[ext_resource path="res://sprites/texts/Voltar.png" type="Texture" id=4]
[ext_resource path="res://sprites/images/3Porquinhos/livro_porquinhos.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/soundOn.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("book:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("iniciarJogo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("voltar:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("title:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("musicButton:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("storyText:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 6.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 8.0
bg_color = Color( 1, 1, 1, 0.407843 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6
shadow_size = 4

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
position = Vector2( 523.543, 312.756 )
script = ExtResource( 1 )

[node name="Bluebackground" type="ColorRect" parent="."]
margin_left = -524.0
margin_top = -314.0
margin_right = 501.0
margin_bottom = 288.0
color = Color( 0.662745, 0.882353, 0.964706, 1 )

[node name="title" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -511.0
margin_top = -299.0
margin_right = 414.0
margin_bottom = -202.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Story title"
autowrap = true
clip_text = true

[node name="iniciarJogo" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -445.837, 177.459 )
scale = Vector2( 0.248295, 0.168712 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -441.601
margin_top = 190.774
margin_right = -175.601
margin_bottom = 251.774
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Iniciar jogo"
align = 1
valign = 1

[node name="voltar" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 374.846, 240.225 )
scale = Vector2( 0.261223, 0.261222 )
normal = ExtResource( 4 )

[node name="book" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -303.393, -13.4696 )
scale = Vector2( 0.206593, 0.206593 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition3 = SubResource( 3 )

[node name="musicButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 439.931, -303.857 )
scale = Vector2( 0.309, 0.309 )
normal = ExtResource( 6 )

[node name="storyText" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -84.0
margin_top = -182.0
margin_right = 452.0
margin_bottom = 181.0
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
tab_size = 14
text = "Aqui está a história aaaaaaa  aaaa aaaaaaaaaaaaaaaa aaa aaaaaaaaaaaaaaaaa aa aaaaaaaa aaaa aaaaaa aaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaa aaaaaaaaaa aaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
scroll_following = true

[connection signal="pressed" from="iniciarJogo" to="." method="_on_iniciarJogo_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="musicButton" to="." method="_on_musicButton_pressed"]
